--- a/teleprompter.html
+++ b/teleprompter.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>简易提词器</title>
   <style>
+    /* 主题色变量：集中管理，便于后续统一换肤。 */
     :root {
       --bg: #121212;
       --panel: #1b1b1b;
@@ -17,6 +18,7 @@
       box-sizing: border-box;
     }
 
+    /* 页面采用上下分区：上方控制区 + 下方提词展示区。 */
     body {
       margin: 0;
       font-family: "Microsoft YaHei", "PingFang SC", sans-serif;
@@ -29,6 +31,7 @@
       padding: 16px;
     }
 
+    /* 控制面板包含输入框、按钮、速度滑块。 */
     .controls {
       background: rgba(27, 27, 27, 0.92);
       border: 1px solid rgba(255, 255, 255, 0.1);
@@ -38,6 +41,7 @@
       gap: 10px;
     }
 
+    /* 提词源文本输入区。 */
     textarea {
       width: 100%;
       min-height: 140px;
@@ -51,6 +55,7 @@
       line-height: 1.5;
     }
 
+    /* 控制组件横向排布，窄屏时允许换行。 */
     .row {
       display: flex;
       flex-wrap: wrap;
@@ -82,6 +87,7 @@
       font-size: 14px;
     }
 
+    /* 提词显示容器：允许看到背景，营造“透明提词层”效果。 */
     .teleprompter {
       position: relative;
       overflow: hidden;
@@ -92,6 +98,7 @@
       min-height: 45vh;
     }
 
+    /* 上下渐隐蒙层：让文字进入/离开视口时更自然。 */
     .teleprompter::before,
     .teleprompter::after {
       content: "";
@@ -113,6 +120,7 @@
       background: linear-gradient(to top, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0));
     }
 
+    /* 实际滚动区域：脚本通过修改 scrollTop 实现平滑匀速自动滚动。 */
     .content {
       position: absolute;
       inset: 0;
@@ -128,6 +136,7 @@
       display: none;
     }
 
+    /* 提词文字样式：使用较大字号、宽行距提升朗读时可读性。 */
     .text {
       margin: 0;
       font-size: clamp(24px, 3.1vw, 44px);
@@ -139,6 +148,7 @@
   </style>
 </head>
 <body>
+  <!-- 控制区：输入文本 + 播放控制 + 速度调节。 -->
   <section class="controls">
     <textarea id="sourceText" placeholder="在这里输入提词内容...">欢迎使用简易提词器。
 你可以在上方输入任意提词内容。
@@ -154,6 +164,7 @@
     </div>
   </section>
 
+  <!-- 展示区：只负责显示提词，不直接编辑。 -->
   <section class="teleprompter" aria-label="提词显示区">
     <div id="content" class="content">
       <p id="displayText" class="text"></p>
@@ -161,6 +172,7 @@
   </section>
 
   <script>
+    // DOM 引用：集中定义，减少重复查询。
     const sourceText = document.getElementById("sourceText");
     const displayText = document.getElementById("displayText");
     const content = document.getElementById("content");
@@ -170,15 +182,18 @@
     const speedRange = document.getElementById("speedRange");
     const speedValue = document.getElementById("speedValue");
 
+    // 运行状态：通过 requestAnimationFrame 控制滚动时序。
     let isRunning = false;
     let speed = Number(speedRange.value);
     let lastTime = 0;
     let rafId = 0;
 
+    // 把输入框内容同步到提词展示区。
     function syncText() {
       displayText.textContent = sourceText.value || "";
     }
 
+    // 每一帧按“速度(px/s) * 时间差(s)”推进滚动位置，保证不同设备下速度一致。
     function tick(timestamp) {
       if (!isRunning) {
         return;
@@ -191,6 +206,7 @@
 
       content.scrollTop += speed * deltaSec;
 
+      // 到底后自动停止，避免空转。
       const maxScroll = content.scrollHeight - content.clientHeight;
       if (content.scrollTop >= maxScroll) {
         isRunning = false;
@@ -201,6 +217,7 @@
       rafId = requestAnimationFrame(tick);
     }
 
+    // 开始滚动：仅在当前未运行时启动动画循环。
     function start() {
       if (isRunning) {
         return;
@@ -210,6 +227,7 @@
       rafId = requestAnimationFrame(tick);
     }
 
+    // 暂停滚动：保留当前位置，可继续播放。
     function pause() {
       isRunning = false;
       lastTime = 0;
@@ -218,11 +236,13 @@
       }
     }
 
+    // 重置滚动：回到顶部，并保持暂停状态。
     function reset() {
       pause();
       content.scrollTop = 0;
     }
 
+    // 编辑文本时，尽量保持当前阅读进度比例，避免跳回开头造成阅读中断。
     sourceText.addEventListener("input", () => {
       const currentRatio = content.scrollTop / Math.max(content.scrollHeight - content.clientHeight, 1);
       syncText();
@@ -230,15 +250,18 @@
       content.scrollTop = currentRatio * newMax;
     });
 
+    // 速度实时生效，并更新可视化文案。
     speedRange.addEventListener("input", () => {
       speed = Number(speedRange.value);
       speedValue.textContent = `${speed} px/s`;
     });
 
+    // 按钮事件绑定。
     startBtn.addEventListener("click", start);
     pauseBtn.addEventListener("click", pause);
     resetBtn.addEventListener("click", reset);
 
+    // 首次加载时先渲染默认文本。
     syncText();
   </script>
 </body>
